2007-03-08  Akim Demaille  <akim.demaille@free.fr>

	Install uasyncregister.hh, uvariable.hh and uvalue.hh
	* src/uasyncregister.hh, src/uvariable.hh, src/uvalue.hh:
	Move to...
	* include/kernel/uasyncregister.hh, include/kernel/uvariable.hh,
	* include/kernel/uvalue.hh: here.

	* Makefile.am, src/Makefile.am, src/uasynccommand.cc,
	* src/uasyncregister.cc, src/uatcandidate.cc, src/ubinder.cc,
	* src/ucallid.cc, src/ucommand.cc, src/uconnection.cc,
	* src/ueventcompound.cc, src/ueventhandler.cc, src/ueventhandler.hh,
	* src/ueventinstance.cc, src/ueventmatch.cc, src/uexpression.cc,
	* src/ugroup.cc, src/uobj.cc, src/uobject.cc, src/userver.cc,
	* src/uvalue.cc, src/uvar.cc, src/uvariable.cc, src/uvariablename.cc:
	Adjust.

2007-03-08  Akim Demaille  <demaille@gostai.com>

	Hide UGhostConnection
	So that cores only need uconnection.hh, but not ughostconnection.hh.
	* include/kernel/userver.hh (getGhostConnection): Return a
	UConnection instead of a UGhostConnection, so that we don't need
	the type UGhostConnection (and its header).
	(ghost): Rename as...
	(ghost_): this.
	* src/console.cc, src/uobject.cc, src/userver.cc: Adjust.

2007-03-08  Akim Demaille  <demaille@gostai.com>

	cores need uconnection.hh
	* src/ucomplaints.hh, src/uconnection.hh: Move to...
	* include/kernel/ucomplaints.hh, include/kernel/uconnection.hh: here.

	* Makefile.am, src/Makefile.am,
	* src/network/bsdnet/connection.hh, src/parser/bison/ugrammar.y,
	* src/uasynccommand.cc, src/ucommand.cc, src/ucomplaints.cc,
	* src/uconnection.cc, src/uexpression.cc, src/ughostconnection.hh,
	* src/uobj.cc, src/uobject.cc, src/userver.cc, src/usystem.cc,
	* src/uvalue.cc, src/uvariable.cc, src/uvariablename.cc:
	Adjust.
	And remove the #define private protected trick...

2007-03-08  Akim Demaille  <demaille@gostai.com>

	Kill a few static consts
	* src/uconnection.hh: here.
	* src/ughostconnection.hh: And here.
	Move them...
	* src/ughostconnection.cc: here.
